Fixed vertical alignment of svg in buttons

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -6,7 +6,7 @@
 @tailwind components;
 
 svg {
-  vertical-align: inherit;
+  vertical-align: initial !important;
 }
 
 body {
